--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         
         <div id="controls-hint">
-            <p>Use Arrow Keys or WASD to move | Click to interact | Press M for Menu | Press B to Build</p>
+            <p>Use Arrow Keys or WASD to move | Click to interact | Press M for Menu | Press B to Build | Press T for Tasks</p>
         </div>
     </div>
     
