--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         
         <div id="controls-hint">
-            <p>Use Arrow Keys or WASD to move | Click to interact | Press M for Menu | Press B to Build | Press T for Tasks | Press D to Decorate</p>
+            <p>Arrow Keys/WASD: Move on roads | Space: Interact | M: Menu | B: Build | T: Tasks | E: Decorate | Mouse: Place decorations</p>
         </div>
     </div>
     
